@@ -21,6 +21,114 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JComboBox
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JPanel
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JPopupMenu
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|ListSelectionModel
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|event
+operator|.
+name|ListSelectionEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|event
+operator|.
+name|ListSelectionListener
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|table
+operator|.
+name|TableCellEditor
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|table
+operator|.
+name|TableColumn
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|BorderLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -363,114 +471,6 @@ name|LimitedTextField
 import|;
 end_import
 
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JComboBox
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JPanel
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JPopupMenu
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|ListSelectionModel
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|event
-operator|.
-name|ListSelectionEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|event
-operator|.
-name|ListSelectionListener
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|table
-operator|.
-name|TableCellEditor
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|table
-operator|.
-name|TableColumn
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|BorderLayout
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
 begin_comment
 comment|/**  * Detail view of the DbEntity attributes.  */
 end_comment
@@ -796,6 +796,75 @@ operator|.
 name|length
 index|]
 decl_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|RemoveAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getAttributePanel
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|CutAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getAttributePanel
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|CopyAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getAttributePanel
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|parentPanel
 operator|.
 name|updateActions
