@@ -1206,6 +1206,75 @@ operator|.
 name|length
 index|]
 decl_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|RemoveAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getRelationshipPanel
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|CutAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getRelationshipPanel
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Application
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|CopyAttributeRelationshipAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|setCurrentSelectedPanel
+argument_list|(
+name|parentPanel
+operator|.
+name|getRelationshipPanel
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|parentPanel
 operator|.
 name|updateActions
